--- a/app/src/main/res/layout/layout_add_member.xml
+++ b/app/src/main/res/layout/layout_add_member.xml
@@ -145,8 +145,21 @@
                 <com.google.android.material.textfield.TextInputEditText
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:focusable="false"
+                    android:focusableInTouchMode="false"
+                    android:text="@{viewModel.member.gender.toString()}"
                     android:drawableEnd="@drawable/ic_arrow_drop_down" />
             </com.google.android.material.textfield.TextInputLayout>
+
+            <Spinner
+                android:id="@+id/genderSpinner"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:background="@android:color/transparent"
+                app:layout_constraintBottom_toBottomOf="@+id/textInputLayout6"
+                app:layout_constraintEnd_toEndOf="@+id/textInputLayout6"
+                app:layout_constraintStart_toStartOf="@+id/textInputLayout6"
+                app:layout_constraintTop_toTopOf="@+id/textInputLayout6" />
 
             <androidx.appcompat.widget.AppCompatImageView
                 android:id="@+id/imageView5"
