--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -2,11 +2,11 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/home"
+        android:id="@+id/fragmentListMember"
         android:title="Home"
         android:icon="@drawable/ic_home"/>
     <item
-        android:id="@+id/about"
-        android:title="About"
+        android:id="@+id/memberAttendanceFragment"
+        android:title="Attendance"
         android:icon="@drawable/ic_info"/>
 </menu>
