--- a/app/src/main/res/layout/fragment_attendance_edit.xml
+++ b/app/src/main/res/layout/fragment_attendance_edit.xml
@@ -21,6 +21,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:drawableEnd="@drawable/ic_arrow_drop_down"
+            android:cursorVisible="false"
             android:inputType="none" />
 
     </com.google.android.material.textfield.TextInputLayout>
@@ -63,7 +64,7 @@
         app:layout_constraintTop_toBottomOf="@+id/radioGroup" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/delete"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
