--- a/app/src/main/res/layout/fragment_attendance_edit.xml
+++ b/app/src/main/res/layout/fragment_attendance_edit.xml
@@ -46,6 +46,7 @@
             android:layout_marginEnd="16dp"
             android:checkedButton="@id/rbPresent"
             android:orientation="horizontal"
+            android:gravity="center"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textInputLayout4">
