--- a/app/src/main/res/layout/layout_add_member.xml
+++ b/app/src/main/res/layout/layout_add_member.xml
@@ -29,8 +29,7 @@
                 android:src="@drawable/naruto"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                tools:srcCompat="@tools:sample/avatars[1]" />
+                app:layout_constraintTop_toTopOf="parent" />
 
             <androidx.appcompat.widget.AppCompatImageView
                 android:id="@+id/imageView"
