--- a/app/src/main/res/xml/file_path.xml
+++ b/app/src/main/res/xml/file_path.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <paths xmlns:android="http://schemas.android.com/apk/res/android">
-    <external-files-path
+    <external-path
         name="photo"
-        path="Android/data/com.soft.attendancekt/file/Pictures" />
+        path="Android/data/com.soft.attendancekt/files/Pictures" />
 </paths>
