--- a/app/src/main/res/layout/layout_bottom_sheet_view.xml
+++ b/app/src/main/res/layout/layout_bottom_sheet_view.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:background="@drawable/curve_background"
     android:layout_width="match_parent"
+    android:backgroundTint="#e3e3e3"
     android:layout_height="wrap_content">
 
     <androidx.appcompat.widget.AppCompatImageButton
