--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -25,4 +25,8 @@
         <item name="android:background">@drawable/curve_background</item>
     </style>
 
+    <style name="AppTheme.Primary" parent="ThemeOverlay.MaterialComponents.Light">
+        <item name="android:colorControlActivated">@color/colorPrimary</item>
+    </style>
+
 </resources>
