--- a/app/src/main/res/layout/layout_member_attendance.xml
+++ b/app/src/main/res/layout/layout_member_attendance.xml
@@ -34,7 +34,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="16dp"
-            android:text="@{obj.eventTime.toString()}"
+            android:text='@{obj.eventTime.toString("MMM dd yyyy hh:mm a")}'
             app:layout_constraintBaseline_toBaselineOf="@+id/textView4"
             app:layout_constraintEnd_toEndOf="parent"
             tools:text="MMM dd,yy hh:mm a" />
